syntax = "proto3";

import "insert.proto";

message Request {
  enum Type { 
	Unknown = 0; 
	Insert = 1; 
	Get = 2; 
	Delete = 3; 
	Count = 4; 
	Contains = 5; 
	Clear = 6;  
  }

  InsertRequest InsertRequest = 1;
}